--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
 
 //    Room DB -
     implementation "androidx.room:room-runtime:2.5.2"
-    kapt "androidx.room:room-common:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
 
 //    DataStore Preferences -
@@ -79,5 +79,6 @@ dependencies {
 
 //    Dagger - Hilt
     implementation("com.google.dagger:hilt-android:2.44")
-     kapt "com.google.dagger:hilt-android-compiler:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
 }
